--- a/index.html
+++ b/index.html
@@ -1,1 +1,153 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Zhuo CHEN's Resume</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
+    }
+    .header {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    .name {
+      font-size: 24px;
+      font-weight: bold;
+    }
+    .contact {
+      font-size: 16px;
+    }
+    .section {
+      margin-bottom: 20px;
+    }
+    .section-header {
+      font-size: 20px;
+      font-weight: bold;
+    }
+    .subsection {
+      margin-left: 20px;
+      margin-top: 10px;
+    }
+    .date {
+      font-style: italic;
+    }
+    .publication {
+      font-weight: bold;
+    }
+    .project-title {
+      font-style: italic;
+    }
+    .award {
+      font-weight: bold;
+    }
+    .skills {
+      font-weight: bold;
+    }
+  </style>
+</head>
+<body>
+  <div class="header">
+    <div class="name">Zhuo CHEN</div>
+    <div class="contact">+ (86) 156-2908-3580 | chenzoe2023@163.com</div>
+  </div>
+  
+  <div class="section">
+    <div class="section-header">EDUCATION</div>
+    <div class="subsection">
+      <div class="date">Sep 2021-Now</div>
+      <div class="project-title">Master Degree in Economics of Population, Resources, and Environment (with Admission Scholarship)</div>
+      University of Chinese Academy of Social Sciences
+      <ul>
+        <li>GPA: 87/100</li>
+        <li>Thesis: Research on the Impact of Negative Population Growth on Economic Growth</li>
+        <li>Courses: Advanced Macro/Micro Economics, Labor Economics, etc.</li>
+      </ul>
+    </div>
+    <div class="subsection">
+      <div class="date">Sep 2017-Jul 2021</div>
+      <div class="project-title">Bachelor Degree in Geographic Information Science</div>
+      Wuhan University
+      <ul>
+        <li>GPA: 3.6/4.0</li>
+      </ul>
+    </div>
+    <div class="subsection">
+      <div class="date">Sep 2017-Jul 2021</div>
+      <div class="project-title">Second Bachelor Degree in International Economics and Trade</div>
+      Wuhan University
+      <ul>
+        <li>GPA: 3.8/4.0</li>
+        <li>Courses: International Trade, Statistics, Finance, etc.</li>
+      </ul>
+    </div>
+  </div>
+  
+  <div class="section">
+    <div class="section-header">PUBLICATION</div>
+    <div class="subsection">
+      <div class="publication">Participated in the writing of the green book Population and Labor Issues in China No.23</div>
+      Social Science Academic Press
+      <ul>
+        <li>Completed the third chapter "Phase Characteristics and Policy Practice of Dual Economic Transformation: The Experience of China and South Korea" as the first student author (supervisor is the first author)</li>
+      </ul>
+    </div>
+  </div>
+  
+  <div class="section">
+    <div class="section-header">RESEARCH EXPERIENCE</div>
+    <div class="subsection">
+      <div class="project-title">Study on the Impact of the Burden of Caring for the Elderly and Children on the Employment of Chinese Women</div>
+      Project of Gender Research Center of the Chinese Academy of Social Sciences
+      <div class="date">Feb 2023-May 2023</div>
+      <ul>
+        <li>Responsible for data collection, data analysis, and writing research proposal</li>
+      </ul>
+    </div>
+    <div class="subsection">
+      <div class="project-title">Participated in the editing of China Population Yearbook 2022</div>
+      <div class="date">Feb 2023-Aug 2023</div>
+      <ul>
+        <li>Responsible for collecting and organizing yearbook data, proofreading manuscripts, and creating keyword indexes</li>
+      </ul>
+    </div>
+    <div class="subsection">
+      <div class="project-title">Participated in the editing of China Population Yearbook 2021</div>
+      <div class="date">Sep 2021-Sep 2022</div>
+      <ul>
+        <li>Responsible for collecting and organizing yearbook data, proofreading manuscripts, and creating keyword indexes</li>
+      </ul>
+    </div>
+  </div>
+  
+  <div class="section">
+    <div class="section-header">INTERN EXPERIENCE</div>
+    <div class="subsection">
+      <div class="project-title">Institute of Service-Oriented Manufacturing</div>
+      Research Assistant
+      <div class="date">Jul 2022-Mar 2023</div>
+      <ul>
+        <li>Participated in the preparation of the China Service Manufacturing Development Report 2021, covering data organization, policy literature compilation, and manuscript proofreading</li>
+        <li>Responsible for writing of reports on the steel energy-saving industry, translating and organizing relevant reports in the UNDP project "China Phosphorus Chemical Industry Chain Energy Conservation and Green Low Carbon Enhancement Project"</li>
+        <li>Awarded as the Outstanding Intern</li>
+      </ul>
+    </div>
+  </div>
+  
+  <div class="section">
+    <div class="section-header">HONORS & AWARDS</div>
+    <ul>
+      <li class="award">Third Prize of Postgraduate Scholarship - 2022</li>
+      <li class="award">Outstanding Communist Youth League Member of Wuhan University - 2021</li>
+    </ul>
+  </div>
+  
+  <div class="section">
+    <div class="section-header">SKILLS</div>
+    <ul class="skills">
+      <li>Skilled in Python, C++ programming</li>
+      <li>Proficient in Stata, ArcGIS data processing software, macro database operations such as UN comtrade</li>
+    </ul>
+  </div>
+</body>
+</html>
